# HaTickets

./: .gitignore  CLAUDE.md  DISCLAIMER.md  README.md  pyproject.toml
.github/: ISSUE_REPLY_TEMPLATES.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: _e2e_dryrun.yml  release.yml  test.yml
desktop/src/: App.vue
docs/: README.md  api-update-research.md  desktop-ticket-logic.md  desktop-usage-guide.md  mobile-app-notes.md  mobile-ticket-logic.md  project-overview.md  quick-start.md
docs/bugs/: 2026-04-01-u2-migration-failures.md
docs/plans/: 2026-03-29-desktop-url-security-hardening.md  2026-03-29-mobile-app-mvp-plan.md  2026-03-30-mobile-hot-path-workflow-design.md  2026-03-31-mobile-appium-to-uiautomator2.md
docs/releases/: v0.3.0-user.md  v0.3.0.md  v0.4.1-user.md  v0.4.1.md
mobile/: attendee_selector.py  buy_button_guard.py  config.example.jsonc  config.jsonc  config.py  damai_app.py  date_utils.py  env_snapshot.py  event_navigator.py  fast_pipeline.py  hot_path_benchmark.py  item_resolver.py  logger.py  page_helpers.py  page_probe.py  price_selector.py  prompt_parser.py  prompt_runner.py  recovery.py
mobile/damai_app/: __init__.py  __main__.py  coords_cache.py  delegators.py  orchestrator.py  purchase_flow.py  recovery_strategies.py  sale_waiter.py  state_probe.py
mobile/scripts/: benchmark_hot_path.sh  start_appium.sh  start_ticket_grabbing.sh
scripts/: release_check.sh
tests/: conftest.py  test_setup_validation.py
tests/integration/: test_mobile_workflow.py  test_multi_session_workflow.py  test_web_workflow.py
tests/manual/: README.md  W2_findings.md  android_compatibility_matrix.md  runbook.md
tests/unit/: test_buy_button_guard.py  test_date_utils.py  test_env_snapshot.py  (+21 more)
web/: logger.py
(+20 files in other folders)
